2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-upgrade.c
		- (nm_gconf_migrate_0_7_vpn_connections, nm_gconf_get_all_connections):
			update the service_type key name to service-type due to NMSetting
			changes

2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- Add a generic alert dialog

	* src/wireless-dialog.h
	  src/wireless-dialog.c
	  	- (security_combo_init): pass the connection along to the security
	  		methods so they can do things like set defaults
	  	- (nma_wireless_dialog_nag_user): if the user didn't enter something
	  		they should really have (like a CA certificate) but we still want
	  		to allow the connection to proceed, add a mechanism for querying the
	  		WirelessSecurity and EAPMethods whether the user should be gently
	  		alerted to that fact

	* src/wireless-security/ws-wep-passphrase.h
	  src/wireless-security/ws-wep-passphrase.c
	  src/wireless-security/ws-leap.h
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-wep-key.h
	  src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wpa-psk.h
	  src/wireless-security/ws-wpa-psk.c
	  src/wireless-security/ws-dynamic-wep.h
	  src/wireless-security/ws-dynamic-wep.c
		- (ws_wep_passphrase_new, ws_leap_new, ws_wep_key_new, ws_wpa_psk_new):
			accept 'connection' argument

	* src/wireless-security/eap-method-leap.h
	  src/wireless-security/eap-method-leap.c
	  src/wireless-security/eap-method-simple.h
	  src/wireless-security/eap-method-simple.c
		- (eap_method_leap_new, eap_method_simple_new): accept 'connection'
			argument, fill in default identity if provided

	* src/wireless-security/wireless-security.h
	  src/wireless-security/wireless-security.c
		- (wireless_security_nag_user): call subclass nag_user method
		- (ws_802_1x_auth_combo_init): grab the default EAP method out of the
			wireless security object, if given; pass connection along to the
			EAP method objects