@@ -1,5 +1,12 @@
 2007-11-07  Dan Williams  <dcbw@redhat.com>
 
+	* src/utils/crypto.c
+	  src/utils/crypto_gnutls.c
+	  src/utils/crypto_nss.c
+		- Make an effort not to leak key material after errors
+
+2007-11-07  Dan Williams  <dcbw@redhat.com>
+
 	* src/gconf-helpers/gconf-helpers.c
 	  src/gconf-helpers/gconf-upgrade.c
 		- (nm_gconf_migrate_0_7_vpn_connections, nm_gconf_get_all_connections):
